scripts/nullaway/annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8.txt
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:19: error: [NullAway] initializer method does not guarantee @NonNull field coefficients (line 13) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public YTerms() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:31: error: [NullAway] initializer method does not guarantee @NonNull field coefficients (line 13) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public YTerms(YTerms src) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:24: error: [NullAway] assigning @Nullable expression to @NonNull field
		coefficients = null;
		             ^
    (see http://t.uber.com/nullaway )
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/polynomial/YTerms.java:334: error: [NullAway] assigning @Nullable expression to @NonNull field
			coefficients = null;
			             ^
    (see http://t.uber.com/nullaway )
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:50: error: [NullAway] dereferenced expression resultTriple is @Nullable
		return resultTriple.third;
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:361: error: [NullAway] unboxing of a @Nullable value
					g2.addEdge(shuffle.get(e.first()), shuffle.get(e.second()));
					                      ^
    (see http://t.uber.com/nullaway )
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:361: error: [NullAway] unboxing of a @Nullable value
					g2.addEdge(shuffle.get(e.first()), shuffle.get(e.second()));
					                                              ^
    (see http://t.uber.com/nullaway )
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:361: error: [NullAway] passing @Nullable parameter 'shuffle.get(e.first())' where @NonNull is required
					g2.addEdge(shuffle.get(e.first()), shuffle.get(e.second()));
					                      ^
    (see http://t.uber.com/nullaway )
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/util/Isomorphism.java:361: error: [NullAway] passing @Nullable parameter 'shuffle.get(e.second())' where @NonNull is required
					g2.addEdge(shuffle.get(e.first()), shuffle.get(e.second()));
					                                              ^
    (see http://t.uber.com/nullaway )
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/AdjacencyList.java:175: error: [NullAway] unboxing of a @Nullable value
				tos.put(to, i + c);
				            ^
    (see http://t.uber.com/nullaway )
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/AdjacencyList.java:205: error: [NullAway] unboxing of a @Nullable value
					edges.get(to).put(from, i - c);
					                        ^
    (see http://t.uber.com/nullaway )
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Util.java:35: error: [NullAway] passing @Nullable parameter 'g2_partitions' where @NonNull is required
		Matrix g2_normalised = normalise(g2_partitions,g2);
		                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Util.java:57: error: [NullAway] dereferenced expression g2_partitions is @Nullable
					BitSet g2_partition = g2_partitions.get(j);
					                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url8f84d8d956_klapaukh_JTuttePoly_tgz-pJ8-BitTutteJ8/src/graph/Util.java:98: error: [NullAway] dereferenced expression partitions is @Nullable
			for(int i=0;i!=partitions.size();++i) {
			                         ^
    (see http://t.uber.com/nullaway )
14 errors
